test(clock): keep host test compatible with conservative Java APIs